# gomoku

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ai_player.h  alpha_zero.h  app.h  board.h  configuration.h  file_manager.h  game.h  game_record.h  grid.h  info_panel.h  mcts.h  mcts_state.h  move_record.h  replay_controller.h
src/: ai_player.cpp  alpha_zero.cpp  app.cpp  board.cpp  configuration.cpp  file_manager.cpp  game.cpp  game_record.cpp  grid.cpp  info_panel.cpp  mcts.cpp  mcts_state.cpp  replay_controller.cpp
